--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-paginate": "^8.3.0",
     "use-debounce": "^10.0.5",
     "yup": "^1.7.0"
@@ -22,8 +23,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "@types/yup": "^0.29.14",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
