--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/yup": "^0.29.14",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.6.2",
     "typescript": "^5"
   }
